--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,19 +22,31 @@ body {
     }
     }
     main{
-        display: flex;
-        justify-content: space-around;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        // justify-content: space-between;
         margin-top: 290px;
-        margin-bottom: 20px;
-        align-items: center;
+        margin-bottom: 100px;
+        // align-items: center;
         .cookieJar {
             display: flex;
+            justify-content: flex-start;
+            align-items: flex-end;
+            img{
+                width: 200px;
+            }
         }
         .game {
             display: flex;
             flex-direction: column;
+            align-items: center;
             gap: 35px;
+            height: 391px;
+            .imgCookie {
+                height: 298px;
+            }
             .btn{
+                // display: ;
                 width: 276px;
                 height: 69px;
                 border-radius: 10px;
@@ -45,14 +57,33 @@ body {
                 font-weight: 300;
                 letter-spacing: 5px;
                 font-size: 32px;
+                transition: 0.2s;
+                cursor: pointer;
+                    &:hover{
+                    transform: scale(1.05);
+                    
+                    }
             }
+            .timer {
+                font-size: 64px;
+                color: #5A2012;
+                font-family: 'Irish Grover';
+                text-align: center;
+                margin: 0;
+            }
+            
         }
         .statistics {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
             font-family: 'Irish Grover';
             font-weight: 700;
             letter-spacing: 5px;
             font-size: 32px;
             text-align: center;
+            margin-right: 50px;
             p {
                 margin-bottom: 0;
             }
