--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,7 @@
 body {
     background-color: #FFF1D7;
     margin: 0;
-    background-image: url(/img/bg.png);   
+    background-image: url(../img/bg.png);   
     background-repeat: no-repeat;
     header{
         h1{
