--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,7 @@
 body {
   background-color: #FFF1D7;
   margin: 0;
-  background-image: url(/img/bg.png);
-  background-repeat: no-repeat;
-}
-body header {
-  background-image: url(/img/bg.png);
+  background-image: url(../img/bg.png);
   background-repeat: no-repeat;
 }
 body header h1 {
